<resources>

    <string name="app_name">Fitness App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Splash_screen">Fitness App</string>
    <string name="initializing">Initializing...</string>


    <string name="Registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create account</string>

    <string name="alert_dialog_forgot_password_title">Reseting Password</string>
    <string name="alert_dialog_forgot_password_sub_title">Please, enter your email address here to get a link to reset your password</string>
    <string name="alert_dialog_forgot_password_field_example">123456@example.com</string>
    <string name="alert_dialog_forgot_password_send_a_link">SEND A LINK</string>
    <string name="alert_dialog_forgot_password_cancel">CANCEL</string>


    <string name="alert_dialog_create_account_title">Choose a platform</string>
    <string name="alert_dialog_create_account_email">Email</string>
    <string name="alert_dialog_create_account_microsoft">Microsoft</string>
    <string name="alert_dialog_create_account_google">Google</string>
    <string name="alert_dialog_create_account_facebook">Facebook</string>
    <string name="alert_dialog_create_account_cancel">Cancel</string>


    <string name="Create_account">Create account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_Create_account">Email</string>
    <string name="password_create_account">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select">Select</string>
    <string name="date">xx/xx/xxxx</string>
    <string name="gender">Gender</string>
    <string name="personal_info">Personal Info</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next_create_account">Next</string>


    <string name="Body">Body</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="height_">175 cm</string>
    <string name="weight_">70 kg</string>
    <string name="age_">30</string>
    <string name="next_body">Next</string>


    <string name="Membership_info">Membership info</string>
    <string name="fitness_name">Fitness name</string>
    <string name="first_day">Your first day at this fitness</string>
    <string name="membership_number">Membership number</string>
    <string name="username_membership_info">Username</string>
    <string name="password_membership_info">Password</string>
    <string name="next_membership_info">Next</string>


    <string name="Account_image">Account image</string>
    <string name="select_account_image">Select account image</string>
    <string name="done">Done</string>


    <string name="Programs">Programs</string>
    <string name="programs_name">Program name</string>
    <string name="days_exercises">x days with x exercise</string>
    <string name="start_date">From: 01/01/2020</string>
    <string name="end_date">To:     01/04/2020</string>

    <string name="create_program">Create a new program</string>
    <string name="create_select_image">Choose an image</string>
    <string name="Program_name">Program’s name</string>
    <string name="Program_name_example">Body bulding</string>
    <string name="coatch_name">Coatch name</string>
    <string name="coatch_name_example">Julian</string>
    <string name="fitness_center">Fitness center</string>
    <string name="fitness_center_example">SATS</string>
    <string name="x_days">Number of days</string>
    <string name="x_days_example">3</string>
    <string name="x_exercises">Number of exercises</string>
    <string name="x_exercises_example">27</string>
    <string name="start_date_create_program">Start date</string>
    <string name="end_date_create_program">End date</string>
    <string name="start_date_example">22/01/2020</string>
    <string name="end_date_example">22/05/2020</string>
    <string name="create_program_button">Create</string>
    <string name="cancel_create_program_button">Cancel</string>


    <string name="about_program_title">About</string>
    <string name="about_program_edit">Edit</string>


    <string name="day_title">Days</string>
    <string name="day_about">About</string>
    <string name="day_add_day">Add</string>


    <string name="day_list_single_item_day_exercise">Day 1, 6 exercise</string>
    <string name="day_list_single_item_name">Shoulders</string>


    <string name="create_day_number">Day number</string>
    <string name="create_day_name">Day name</string>
    <string name="create_day_exercises_number">Number of exercises</string>
    <string name="create_day_create">Add</string>


    <string name="Exercise">Exercises</string>
    <string name="exercise_add">Add</string>
    <string name="exercise_about">About</string>







</resources>