<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimaryDark"
    android:orientation="vertical"
    tools:context=".registration.Registration"
    android:layout_gravity="center"
    >

    <TextView
        style="@style/title_main_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration"
        />


    <EditText
        android:id="@+id/id_username"
        style="@style/field"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />


    <EditText
        android:id="@+id/id_password"
        style="@style/field_sub_field"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/password" />


    <Button
        android:id="@+id/sign_in"
        style="@style/button_wide_main_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        />

    <Button
        android:id="@+id/id_create_account"
        style="@style/button_wide_main_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        />

    <TextView
        android:id="@+id/id_forgot_password"
        style="@style/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        />

</LinearLayout>