<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="278dp"
    android:paddingBottom="30dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/program_list_recyclerview"
    android:id="@+id/program_list_button"
    >


        <ImageView
            android:id="@+id/program_list_image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/placeholder_image"
            android:padding="2dp"
            />

    <TextView
        android:id="@+id/program_list_program_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programs_name"
        style="@style/programs_list_recyclerview_title"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"

        >


        <TextView
            android:id="@+id/program_list_days_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_exercises"
            style="@style/programs_list_recyclerview_sub_title"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        >

        <TextView
            android:id="@+id/program_list_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            style="@style/programs_list_recyclerview_sub_title"

            />

        <TextView
            android:id="@+id/program_list_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            style="@style/programs_list_recyclerview_sub_title"
            />
    </LinearLayout>

</LinearLayout>